moved api controller to api dir and added CarRentalUserController.php and CarRentalCarController.php
