# app/Http/Controllers/Api/CarRentalCarController.php
@@ -1,0 +1,237 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+
+class CarRentalCarController extends Controller
+{
+    protected $cars;
+
+    /*public function __construct(cars $cars){
+        $this->cars = $cars;
+    }*/
+
+    /**
+     * Create cars
+     * @OA\Post (
+     *     path="/cars-rental/api/v1/cars/store",
+     *     tags={"cars"},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="title",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="content",
+     *                          type="string"
+     *                      )
+     *                 ),
+     *                 example={
+     *                     "title":"example title",
+     *                     "content":"example content"
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="title", type="string", example="title"),
+     *              @OA\Property(property="content", type="string", example="content"),
+     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="invalid",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="msg", type="string", example="fail"),
+     *          )
+     *      )
+     * )
+     */
+    public function store(Request $request){
+        //$cars = $this->cars->createcars($request->all());
+        $data = [
+            'status' => 'success',
+            'message' => 'Hello World!'
+        ];
+        return response()->json($data);
+    }
+
+    /**
+     * Update cars
+     * @OA\Put (
+     *     path="/cars-rental/api/v1/cars/update/{id}",
+     *     tags={"cars"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                      type="object",
+     *                      @OA\Property(
+     *                          property="title",
+     *                          type="string"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="content",
+     *                          type="string"
+     *                      )
+     *                 ),
+     *                 example={
+     *                     "title":"example title",
+     *                     "content":"example content"
+     *                }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="title", type="string", example="title"),
+     *              @OA\Property(property="content", type="string", example="content"),
+     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z")
+     *          )
+     *      )
+     * )
+     */
+    public function update($id, Request $request){
+        try {
+            $cars = $this->cars->updatecars($id,$request->all());
+            return response()->json($cars);
+        }catch (ModelNotFoundException $exception){
+            return response()->json(["msg"=>$exception->getMessage()],404);
+        }
+    }
+
+    /**
+     * Get Detail cars
+     * @OA\Get (
+     *     path="/cars-rental/api/v1/cars/get/{id}",
+     *     tags={"cars"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="success",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="title", type="string", example="title"),
+     *              @OA\Property(property="content", type="string", example="content"),
+     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
+     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z")
+     *         )
+     *     )
+     * )
+     */
+    public function get($id){
+        $cars = $this->cars->getcars($id);
+        if($cars){
+            return response()->json($cars);
+        }
+        return response()->json(["msg"=>"cars item not found"],404);
+    }
+
+    /**
+     * Get List cars
+     * @OA\Get (
+     *     path="/cars-rental/api/v1/cars/gets",
+     *     tags={"cars"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="success",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 type="array",
+     *                 property="rows",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(
+     *                         property="_id",
+     *                         type="number",
+     *                         example="1"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="title",
+     *                         type="string",
+     *                         example="example title"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="content",
+     *                         type="string",
+     *                         example="example content"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="updated_at",
+     *                         type="string",
+     *                         example="2021-12-11T09:25:53.000000Z"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="created_at",
+     *                         type="string",
+     *                         example="2021-12-11T09:25:53.000000Z"
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+     */
+    public function gets(){
+        $carss = $this->cars->getscars();
+        return response()->json(["rows"=>$carss]);
+    }
+
+    /**
+     * Delete cars
+     * @OA\Delete (
+     *     path="/cars-rental/api/v1/cars/delete/{id}",
+     *     tags={"cars"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="success",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="msg", type="string", example="delete cars success")
+     *         )
+     *     )
+     * )
+     */
+    public function delete($id){
+        try {
+            $cars = $this->cars->deletecars($id);
+            return response()->json(["msg"=>"delete cars success"]);
+        }catch (ModelNotFoundException $exception){
+            return response()->json(["msg"=>$exception->getMessage()],404);
+        }
+    }
+}
